Adjust for new Big Sur layout

--- a/spicetify_data/Themes/Lovelaced/user.css
+++ b/spicetify_data/Themes/Lovelaced/user.css
@@ -125,6 +125,10 @@
 	opacity: 1!important;
 }
 
+.sidebar .sidebar-navbar {
+	padding-top: 30px!important;
+}
+
 .view-player .player-controls-container,
 .view-player .player-controls-container .controls {
 	overflow: visible !important;
