--- a/spicetify_data/Themes/Lovelaced/user.css
+++ b/spicetify_data/Themes/Lovelaced/user.css
@@ -243,6 +243,7 @@ form, so I move last cover to the right 20px and first one to the left 20px
   padding-top: 1px;
   border-radius: 16px;
   color: var(--modspotify_main_bg);
+  background-color: var(--modspotify_main_fg);
   transition-property: transform, box-shadow, color, background-color;
 }
 
@@ -736,4 +737,6 @@ body.remotebar .view-player .player-bar-wrapper {
 	-moz-transition-property:width,height,background,font-size,opacity;
 }
 
-
+.ConnectDevicePicker__button--with-badge:after{
+  background-color:var(--modspotify_main_fg)
+}
